--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install build-essential -y
+          sudo apt-get install cpputest
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
@@ -33,14 +34,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    
+
       - name: Build
         id: make_build
         run: |
           make compile
+          make ut
 
       - name: Run Tests
         run: |
+          make nbchk
+          ./ut
           pytest
 
       - name: Upload Artifacts
@@ -64,6 +68,7 @@ jobs:
         continue-on-error: true
         run: |
           brew update
+          brew install cpputest
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
@@ -78,10 +83,13 @@ jobs:
       - name: Build
         id: make_build
         run: |
-          make compile CC=clang
+          make compile
+          make ut
 
       - name: Run Tests
         run: |
+          make nbchk
+          ./ut
           pytest
 
       - name: Upload Artifacts
