--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 ut
 *~
+*.pt
+*.pkl
 *.nbconvert.ipynb
 .DS_Store
 .vscode
 data/imagenette2
 data/imagenette2.tgz
 /data
+/models
 stdout.txt
 err.txt
 actc.txt
