--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,10 @@ jobs:
           sudo make install
           sudo ldconfig
 
-      - name: Set up Python 3.10
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Pip setup
         run: |
@@ -65,7 +65,7 @@ jobs:
             test_outputs/
 
   macOS-latest-make:
-    runs-on: macos-latest
+    runs-on: macos-latest # macos-14 20/5/2024
 
     steps:
       - name: Clone
@@ -74,17 +74,15 @@ jobs:
 
       - name: Dependencies
         id: depends
-        # line: `sudo rm ...` remove preinstalled Python to avoid conflicts
         run: |
           brew update
-          sudo rm -rf /Library/Frameworks/Python.framework/
           brew install cpputest blis llvm libomp
           export PATH="/usr/local/opt/llvm/bin:$PATH"
 
-      - name: Set up Python 3.10
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Pip setup
         run: |
