automate benchmarking with GitHub Actions
I added a total of four benchmark tests: vanilla tinyRuntime for ARM and x86, and quantized tinyRuntime for ARM and x86. After the test, GitHub Actions uploads the times to the https://github.com/ninjalabo/benchmark/tree/gh-pages. The results are then displayed at https://ninjalabo.github.io/benchmark/dev/bench/.

--- a/.github/workflows/inference-test.yml
+++ b/.github/workflows/inference-test.yml
@@ -43,14 +43,14 @@ jobs:
           make ut
           make compile
           ./ut
-          pytest
+          pytest test_all.py
 
       - name: Run optimized implementation
         run: |
           make ut BLIS=1 ARCH=x86
           make compile BLIS=1 ARCH=x86
           ./ut
-          pytest
+          pytest test_all.py
 
       - name: Run Python notebooks
         run: |
@@ -94,14 +94,14 @@ jobs:
           make ut
           make compile
           ./ut
-          pytest
+          pytest test_all.py
 
       - name: Run optimized implementation
         run: |
           make ut BLIS=1
           make compile BLIS=1
           ./ut
-          pytest
+          pytest test_all.py
 
       - name: Run Python notebooks
         run: |
