fix compiler to load model to CPU
`ninjalabo/compiler-export-models` (`prep_model.py`), which previously loaded the model on the device where it was saved, now always loads the model to the CPU. This change avoids errors when loading a GPU-saved model on a CPU-only machine. Additionally, the GitHub workflow for the compiler has been modified to be triggered only when related files are changed.

--- a/.github/workflows/compiler-test.yml
+++ b/.github/workflows/compiler-test.yml
@@ -3,8 +3,18 @@ name: compiler-test
 
 on:
   push:
+    paths:
+      - 'prep_model.py'
+      - 'export_model.py'
+      - 'Dockerfile'
+      - '.github/workflows/compiler-test.yml'
   pull_request:
     types: [opened, synchronize, reopened]
+    paths:
+      - 'prep_model.py'
+      - 'export_model.py'
+      - 'Dockerfile'
+      - '.github/workflows/compiler-test.yml'
   workflow_dispatch:
 
 jobs:
