--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-torch==2.1.1
-pytest==8.0.0
-torchvision==0.16.1
-matplotlib==3.8.2
-scipy==1.11.1
+pytest
+matplotlib
+scipy
 jupyter
 toml
 huggingface_hub
