create three compilers to export models: vanilla, dq and sq
In this commit, I generated three Docker images: `compiler-export-vanilla`, `compiler-export-dq`, and `compiler-export-sq` to export each model (vanilla, dynamically quantized, and statically quantized). Each new file, `export-model*.py`, contains the source code for exporting the model in its respective compiler Docker image. This replaces `compiler-export-models`.

Additionally, I created a new file `install_static_blas.sh` for installing BLIS and oneDNN statically to compile `run.c` and `runq.c` statically.

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,8 +2,8 @@ name: benchmark
 # Run the workflow if C files are modified
 on:
   push:
-#     paths:
-#       - '**/*.c'
+    paths:
+      - '**/*.c'
   workflow_dispatch:
 
 permissions:
